--- a/css/style.css
+++ b/css/style.css
@@ -6,16 +6,26 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
+:root{
+    --BACKGROUNDCOLOR: rgb(241, 241, 241);
+    --FONTCOLOR: black;
+    --ACCENTCOLOR: #ff8528;
+    
+}
 body{
-    background-color: #080808;
-    color: white;
+    background-color: var(--BACKGROUNDCOLOR);
+    color: var(--FONTCOLOR);
 
 }
 
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(../imgs/background.jpg);
+    background-image: url(../imgs/background2.png);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -45,7 +55,7 @@ nav ul li{
 }
 
 nav ul li a{
-    color: white;
+    color: var(--FONTCOLOR);
     text-decoration: none;
     font-size: 18px;
     position: relative;
@@ -55,7 +65,7 @@ nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #ff8528;
+    background: var(--ACCENTCOLOR);
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -77,14 +87,14 @@ nav ul li a:hover::after{
     margin-top: 20px;
 }
 
-.header-text h1 span{
-    color:#ff8528;
+.header-text p span{
+    color:var(--ACCENTCOLOR);
 }
 
 /*About*/
 #about{
     padding: 80px 0;
-    color: #ababab;
+    color: var(--FONTCOLOR);
 }
 
 .row{
@@ -110,7 +120,7 @@ nav ul li a:hover::after{
 .sub-title{
     font-size: 60px;
     font-weight: 600;
-    color: white;
+    color: var(--FONTCOLOR);
 
 }
 
@@ -132,7 +142,7 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #ff8528;
+    background: var(--ACCENTCOLOR);
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -150,7 +160,7 @@ nav ul li a:hover::after{
 }
 
 .tab-contents ul li span{
-    color: #ff8528;
+    color: var(--ACCENTCOLOR);
     font-style: 14px;
 }
 
@@ -174,12 +184,13 @@ nav ul li a:hover::after{
     margin-top: 50px;
 }
 .services-list div{
-    background-color: #262626;
+    background-color: var(--BACKGROUNDCOLOR);
     padding: 40px;
     font-size: 13px;
     font-weight: 300;
     border-radius: 10px;
     transition: background 0.5s, transform 0.5s;
+    border: 1px solid var(--ACCENTCOLOR);
 }
 
 .services-list div i{
@@ -195,14 +206,14 @@ nav ul li a:hover::after{
 
 .services-list div a{
     text-decoration: none;
-    color: white;
+    color: var(--FONTCOLOR);
     font-size: 12px;
     margin-top: 20px;
     display: inline-block;
 }
 
 .services-list div:hover{
-    background-color: #ff8528;
+    background-color: var(--ACCENTCOLOR);
     transform: translateY(-10px);
 }
 
@@ -223,6 +234,7 @@ nav ul li a:hover::after{
     border-radius: 10px;
     position: relative;
     overflow: hidden;
+    transition: 0.5s;
 }
 
 .work img{
@@ -232,10 +244,15 @@ nav ul li a:hover::after{
     transition: transform 0.5s;
 }
 
+.work:hover{
+    transform: translateY(-10px);
+}
+
 .layer{
+    color: var(--BACKGROUNDCOLOR);
     width: 100%;
     height: 0%;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), #ff8528);
+    background: linear-gradient(rgba(255, 255, 255, 0.1), --ACCENTCOLOR);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -248,7 +265,7 @@ nav ul li a:hover::after{
     padding: 0 40px;
     text-align: center;
     font-size: 14px;
-    transition: height 0.5s;
+    transition: 0.5s;
 }
 
 .layer h3{
@@ -259,7 +276,7 @@ nav ul li a:hover::after{
 
 .layer a{
     margin-top: 20px;
-    color: #ff8528;
+    color: var(--ACCENTCOLOR);
     text-decoration: none;
     font-size: 18px;
     line-height: 60px;
@@ -270,29 +287,26 @@ nav ul li a:hover::after{
     text-align: center;
 }
 
-.work:hover img {
-    transform: scale(1.05);
-}
+
 
 .work:hover .layer{
     height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .btn{
     display: block;
     margin: 50px auto;
     width: fit-content;
-    border: 1px solid #ff8528;
+    border: 1px solid var(--ACCENTCOLOR);
     padding: 14px 50px;
     border-radius: 6px;
     text-decoration: none;
     color: white;
-    transition: background 0.5s;
+    background: var(--ACCENTCOLOR);
 }
 
-.btn:hover{
-    background: #ff8528;
-}
+
  /*Contact*/
 .contact-left{
     flex-basis: 35%;
@@ -310,7 +324,128 @@ nav ul li a:hover::after{
 }
 
 .contact-left p i{
-    color: #ff8528;
+    color: var(--ACCENTCOLOR);
     margin-right: 15px;
     font-size: 25px;
+}
+
+.btn2.btn2{
+    display: inline-block;
+    color: white;
+    background-color: var(--ACCENTCOLOR);
+}
+
+.contact-right form{
+    width: 100%;
+    
+}
+
+form input, form textarea{
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: white;
+    padding: 15px;
+    margin: 15px 0;
+    color: var(--FONTCOLOR);
+    font-size: 18px;
+    border-radius: 6px;
+}
+
+form .btn2{
+    padding: 14px;
+    font-size: 18px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+.copyright{
+    width: 100%;
+    text-align: center;
+    padding: 25px;
+    background: white;
+    font-weight: 300;
+    margin-top: 20px;
+}
+
+nav .fa-solid.fa-xmark, .fa-solid.fa-bars{
+    display: none;
+}
+
+/*css for small screen*/
+@media only screen and (max-width: 600px){
+
+    .header{
+        background-image: url(../imgs/background2.1.png);
+    }
+    .header-text{
+        margin-top: 100%;
+        font-size: 16px;
+
+    }
+    .header-text h1{
+        font-size: 30px;
+        
+    }
+
+    nav .fa-solid.fa-xmark, .fa-solid.fa-bars{
+        display: block;
+        font-size: 25px;
+    }
+
+    nav ul{
+        background: var(--ACCENTCOLOR);
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+
+    }
+
+    nav ul li{
+        display: block;
+        margin: 25px;
+
+    }
+    nav ul .fa-solid.fa-xmark{
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+    }
+    .sub-title{
+        font-size: 40px;
+
+    }
+    .about-col-1, .about-col-2{
+        flex-basis: 100%;
+    }
+
+    .about-col-1{
+        margin-bottom: 30px;
+    }
+
+    .avout-col-2{
+        font-size: 14px;
+    }
+    .tab-links{
+        font-size: 16px;
+        margin-right: 20px;
+    }
+    .contact-left, .contact-right{
+        flex-basis: 100%;
+    }
+    .copyright{
+        font-size: 14px;
+    }
+}
+
+#msg{
+    color: var(--ACCENTCOLOR);
+    margin-top: -10px;
+    display: block;
 }
